# smartwater-usage-monitoring-system

./: .env  .replit  README.md  app.py  auth.py  dashboard.py  data_processing.py  esp_manager.py  firebase_manager.py  generate_icon.py  pyproject.toml  replit.nix  settings.py  simple_app.py  simulate_data.py  simulated_data.json  utils.py  wifi_status.py
